--- a/app/views/groups/edit.haml
+++ b/app/views/groups/edit.haml
@@ -2,7 +2,7 @@
 
 - form_for @group do |f|
   = f.error_messages
-  = render :partial => 'groups/fields', :locals => { :f => f }
+  = render 'groups/fields', :f => f
   %iframe{:src => logo_group_path(@group), :scrolling => 'no', :frameborder => 0, :style => 'height:240px'}
   .submit
     = f.submit t('.submit')
