--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -22,4 +22,4 @@
   
 - content_for :column do
   %p.new_example_project= t('.create_an_example_project', :link => new_example_project_path)
-  = project_new_primer
+  = render 'projects/new_primer'
