--- a/app/views/comments/_list_comments.haml
+++ b/app/views/comments/_list_comments.haml
@@ -1,3 +1,3 @@
 = comments_script(target)
-= render :partial => 'comments/comment', :collection => comments
+= render comments
 = comment_update_last_id
