--- a/app/views/groups/new.haml
+++ b/app/views/groups/new.haml
@@ -4,7 +4,7 @@
 
 - form_for @group do |f|
   = f.error_messages
-  = render :partial => 'groups/fields', :locals => { :f => f }
+  = render 'groups/fields', :f => f
   = group_logo_fields(@group, f)
   .submit
     = f.submit t('.submit')
