--- a/app/views/layouts/application.m.haml
+++ b/app/views/layouts/application.m.haml
@@ -8,11 +8,10 @@
 
 %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env}"}
   #header
-    = render 'shared/header'
+    = header
     = navigation(@current_project,current_user.projects,current_user.recent_projects)
   #content
-    - if @current_project
-      = render 'shared/project_navigation', :project => @current_project
+    = project_navigation(@current_project) if @current_project
     = yield
   #footer
     =# link_to "Use full Teambox", root_path
