--- a/app/views/search/results.haml
+++ b/app/views/search/results.haml
@@ -4,10 +4,10 @@
 
   - form_tag search_path do
     = text_field_tag :search, params[:search]
-    = submit_tag (@comments ? "Search again" : "Search")
+    = submit_tag(@comments ? "Search again" : "Search")
 
 - if @comments
   #results_set
-    = render :partial => 'comments/comment', :collection => @comments
+    = render @comments
   = will_paginate @comments, :params => {:search => @search}
   = javascript_tag("Element.addHighlights($('results_set'), #{@search.split.to_json}, 'highlight')")
