--- a/app/views/shared/_projects.haml
+++ b/app/views/shared/_projects.haml
@@ -1,3 +1,3 @@
 .project_list
   %h2= t('.projects')
-  = render :partial => 'projects/project', :collection => projects
+  = render :collection => projects
