Moving Attach icons (clip, hours) to sprites

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -42,19 +42,9 @@ form.new_comment
   .add_button
     float: left
     margin-bottom: 0
-  .attach_button
+  .attach_icon, .add_hours_icon
     float: left
-    margin-bottom: 0
-    margin-right: 10px
-    display: block
-    width: 16px
-    height: 26px
-    span
-      display: none
-  .attach_file
-    background: url('/images/icons/attach.png') no-repeat center center
-  .attach_time
-    background: url('/images/icons/time_add.png') no-repeat center center
+    margin: 4px
   .hours
     padding-left: 1px
     padding-right: 10px
