--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -8,8 +8,13 @@
     +sprite("/images/_sprites_16px.png", $x_pos, $y_pos+16px, $x_size, $y_size)
 
 .trash_icon
-  +hoverable_sprite_16px(0px, 0px, 16px, 16px)
+  +hoverable_sprite_16px(16px*0, 0px, 16px, 16px)
 
 .edit_icon
-  +hoverable_sprite_16px(16px, 0px, 16px, 16px)
+  +hoverable_sprite_16px(16px*1, 0px, 16px, 16px)
 
+.attach_icon
+  +hoverable_sprite_16px(16px*8, 0px, 16px, 16px)
+
+.add_hours_icon
+  +hoverable_sprite_16px(16px*7, 0px, 16px, 16px)
