--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -127,8 +127,8 @@
       background: url(/images/email.gif) no-repeat left
     span
       display: none
-      margin: 5px 0 0 25px
-      padding: 10px 25px 10px 10px
+      margin-top: 10px
+      padding: 10px
       color: #505050
       -moz-border-radius: 4px
       border: 1px solid #C8C8C8
@@ -137,13 +137,6 @@
       a
         background-image: none
         padding-left: 0
-      .closeThis
-        background: url(/images/close_help.png) no-repeat left
-        text-indent: -9999px
-        width: 15px
-        float: right
-        margin-top: -5px
-        margin-right: -20px
   a.gantt_link
     font-size: 13px
     padding-left: 25px
