Using sprites for project dropdown quicklinks

--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -16,5 +16,11 @@
 .attach_icon
   +hoverable_sprite_16px(16px*8, 0px, 16px, 16px)
 
-.add_hours_icon
-  +hoverable_sprite_16px(16px*7, 0px, 16px, 16px)
+.comment_icon
+  +hoverable_sprite_16px(16px*3, 0px, 16px, 16px)
+
+.task_icon
+  +hoverable_sprite_16px(16px*4, 0px, 16px, 16px)
+
+.page_icon
+  +hoverable_sprite_16px(16px*6, 0px, 16px, 16px)
