Moving sidebar images to sprites (print, calendar, gantt, feeds, mail)

--- a/app/styles/_banner.sass
+++ b/app/styles/_banner.sass
@@ -28,9 +28,9 @@
         &.active
           border-bottom: 1px solid white
         &#show_calendar_link
-          background: url(/images/calendar_date_select/calendar.gif) no-repeat left
+          +calendar_icon
         &#show_gantt_chart_link
-          background: url(/images/gantt.gif) no-repeat left
+          +gantt_icon
         &:hover
           text-decoration: none
 
