Organizations allow you to group projects and users
Creating models Organization and Membership
Transfers all users and projects from Groups to Organization
For projects without a Group, creates a "Projects from User" Organization

Roles for organizations:
- Admins can manage users
- Participants can create projects inside
- External users are also listed

--- a/app/styles/_navigation.sass
+++ b/app/styles/_navigation.sass
@@ -170,6 +170,7 @@ ul.nav_tab_list
       padding: 5px 5px
       width: 220px
     p.div
+      display: block
       color: black
       font-weight: bold
       padding: 0 5px
