--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -75,6 +75,9 @@ $typeface: "Lucida Grande", Helvetica, "Helvetica Neue", Arial, Verdana, sans-se
   background-color: rgb(240, 240, 240)
   +rounded(5px)
 
+.inline
+  display: inline
+
 .fyi
   position: absolute
   background: white
