--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -2,7 +2,6 @@
 
 - form_for @project do |f|
   = project_fields(f,@project)
-
   - contacts = current_user.contacts
   .invite_contacts
     %h3= t('.invite_people')
@@ -13,7 +12,7 @@
             = check_box_tag 'project[invite_users][]', user.id
             &= user.name
     .clear
-    %p
+    %p.invite_by_email
       = t('.invite_by_email')
       = f.text_area :invite_emails, :placeholder => "john@galt.com, francisco@danconia.com"
   
