--- a/app/views/shared/_projects_dropdown.haml
+++ b/app/views/shared/_projects_dropdown.haml
@@ -4,6 +4,7 @@
     - if projects.size > 12 # separate recent projects when there are many
       %li
         %p.div= t('.recent_projects')
+        .clear
       - current_user.recent_projects.each do |project|
         %li
           = link_to(truncate(project.name, :length => 30), project_path(project), :class => 'tab_item')
@@ -14,12 +15,27 @@
           .clear
       %li
         %p.div= t('.rest_of_the_projects')
-  - projects.each do |project|
-    %li
-      = link_to(truncate(project.name, :length => 30), project_path(project), :class => 'tab_item')
-      .quicklinks
-        = quicklink_conversations(project)
-        = quicklink_tasks(project)
-        = quicklink_pages(project)
-  - if current_user.betatester
+
+    - projects.group_by(&:organization).each do |org,org_projects|
+      %li
+        %p.div{ :style => 'padding-top: 10px' }= link_to org, org
+        .clear
+      - org_projects.each do |project|
+        %li
+          = link_to(truncate(project.name, :length => 30), project_path(project), :class => 'tab_item')
+          .quicklinks
+            = quicklink_conversations(project)
+            = quicklink_tasks(project)
+            = quicklink_pages(project)
+          .clear
+
     %li= link_to(t('.new_project'), new_project_path, :class => 'tab_item', :style => 'font-weight: bold; margin-top: 5px')
+  - else
+    - projects.each do |project|
+      %li
+        = link_to(truncate(project.name, :length => 30), project_path(project), :class => 'tab_item')
+        .quicklinks
+          = quicklink_conversations(project)
+          = quicklink_tasks(project)
+          = quicklink_pages(project)
+          .clear
