fix show again the "add hours" icon, bug introduced in 67f504b7

--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -24,6 +24,8 @@
   +hoverable_sprite_16px(16px*1, 0px, 16px, 16px)
 .attach_icon
   +hoverable_sprite_16px(16px*8, 0px, 16px, 16px)
+.add_hours_icon
+  +hoverable_sprite_16px(16px*7, 0px, 16px, 16px)
 .comment_icon
   +hoverable_sprite_16px(16px*3, 0px, 16px, 16px)
 .task_icon
