Proper headers inside textilized areas

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -98,10 +98,14 @@
       font-size: 12px
       color: rgb(180, 180, 180)
   h3
-    font-size: 16px
+    font-size: 18px
     font-weight: normal
     margin: 0px
       bottom: 5px
+  .note
+    h3
+      border-bottom: 2px solid #eee
+      margin-bottom: 10px
   p
     font-size: 12px
     line-height: 1.4em
