Proper headers inside textilized areas

--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -58,6 +58,9 @@ textarea.placeholder, input.placeholder
   font-size: 12px
   color: rgb(60, 60, 60)
   overflow: auto
+  h1, h2
+    font-size: 16px
+    border-bottom: 0
   ul, ol
     margin: 0
       top: 10px
