Collapse really long comments

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -231,6 +231,7 @@ form.convert_comment
       color: #9da3a7
     .body
       margin-top: 5px
+      max-height: 350px
   .mention
     padding: 0 3px
     background-color: #eee
