--- a/app/views/pages/_page_sidebar.haml
+++ b/app/views/pages/_page_sidebar.haml
@@ -1,3 +1,4 @@
-.page{ :class => "#{ 'active' if current_target == page }" }
+.page{ :id => "sidebar_page_#{page.id}", :class => "#{ 'active' if current_target == page }" }
   .title
+    = drag_image
     = page_link(page)
