Collapsing project menu dropdown for users with many projects

--- a/app/styles/_navigation.sass
+++ b/app/styles/_navigation.sass
@@ -155,6 +155,9 @@ div.project_settings_navigation
 
 ul.nav_tab_list
   z-index: 250
+  max-height: 350px
+  width: 320px
+  overflow-y: auto
   li
     float: none
     max-width: 300px
