Compact API/doc routes table, remove unused action.

--- a/app/styles/apidocs.sass
+++ b/app/styles/apidocs.sass
@@ -191,7 +191,21 @@ div.route
   .status
     span.title
       font-weight: bold
-
+ul.table
+  margin: 0
+  padding: 0
+  list-style-type: none
+  li.route
+    padding: 3px 10px
+    margin: 0
+  li.title
+    margin: 15px 0 3px
+    font-weight: bold
+    font-size: 14px
+  div.method
+    font-weight: bold
+    width: 70px
+    
 .model_apidocs, .concepts_apidocs, .index_apidocs, .routes_apidocs
   pre, code
     font-size: 12px
