Projects can now be public, accessible through /public

--- a/app/views/projects/fields/_new.html.haml
+++ b/app/views/projects/fields/_new.html.haml
@@ -7,3 +7,7 @@
   .check_box.archived
     = f.check_box :tracks_time
     = f.label :tracks_time, t('projects.fields.tracks_time') + " " + time_tracking_doc
+
+.check_box.archived
+  = f.check_box :public
+  = f.label :public, t('projects.fields.public_project')
