--- a/app/views/projects/fields/_settings.haml
+++ b/app/views/projects/fields/_settings.haml
@@ -15,3 +15,6 @@
   .check_box.archived
     = f.check_box :tracks_time
     = f.label :tracks_time, t('projects.fields.tracks_time')
+  .check_box.archived
+    = f.check_box :public
+    = f.label :public, t('projects.fields.public_project')
