--- a/app/views/public/projects/show.haml
+++ b/app/views/public/projects/show.haml
@@ -11,7 +11,7 @@
       %span
         == #{pluralize(conversation.comments_count, "message", "message")},
         == last one #{time_ago_in_words(conversation.updated_at)} ago
-  .conversation= link_to "+ New conversation", new_project_conversation_path(@projectt), :class => :new_conversation
+  .conversation= link_to "+ New conversation", new_project_conversation_path(@project), :class => :new_conversation
 
 .tasks
   %h3 How to report issues and suggestions
