Adding Pages to public projects

--- a/app/styles/public_projects.sass
+++ b/app/styles/public_projects.sass
@@ -203,6 +203,20 @@ h2
       float: right
       color: #999
 
+.pages
+  div.page
+    display: inline-block
+    margin: 5px 10px 5px 0
+    width: 300px
+    a
+      padding-left: 25px
+      border: none
+      font-size: 12px
+    span
+      font-size: 12px
+      float: right
+      color: #999
+
 .comment
   h3
     span
@@ -216,3 +230,19 @@ h2
   margin: 30px 0 20px
   background-color: rgb(255,255,220)
   border: 1px solid rgb(255,255,220) - #333
+
+#slots
+  font-size: 12px
+  h3
+    margin-bottom: 0
+  .slotActions, .actions, .info, .date, .reference
+    display: none
+
+.wrapper
+  .column
+    .section
+      margin-bottom: 20px
+    h3
+      margin-bottom: 5px
+    a
+      padding-left: 0
