--- a/app/views/public/projects/_column.haml
+++ b/app/views/public/projects/_column.haml
@@ -1,7 +1,12 @@
 - content_for :column do
-  = link_to "Overview", public_project_path(@project)
-  = link_to "All Conversations", public_project_conversations_path(@project)
-  %br
-  = link_to "Join this group", project_path(@project)
-  %br
-  = link_to "Other public projects...", public_projects_path
+  .section
+    = link_to "Overview", public_project_path(@project)
+    = link_to "All Conversations", public_project_conversations_path(@project)
+  - if @project.pages.any?
+    .section
+      %h3 Pages
+      - for page in @project.pages
+        = link_to page, public_project_page_path(@project, page)
+  .section
+    = link_to "Join this group", project_path(@project)
+    = link_to "Other public projects...", public_projects_path
