--- a/app/views/public/projects/show.haml
+++ b/app/views/public/projects/show.haml
@@ -3,6 +3,12 @@
   = link_to "Join the project", public_project_path(@project)
   to receive community announcements or request support.
 
+.pages
+  %h2 Documentation
+  - for page in @project.pages
+    .page
+      = link_to page, public_project_page_path(@project, page), :class => :page
+
 .conversations
   %h2 Recent conversations
   - for conversation in @recent_conversations
