missing translations in password reset process and search

--- a/app/views/shared/_search_bar.haml
+++ b/app/views/shared/_search_bar.haml
@@ -9,4 +9,4 @@
       - if per_project
         = hidden_field_tag :project_id, @current_project
         
-      = submit_tag "search"
+      = submit_tag t('search.submit')
