--- a/app/views/search/results.haml
+++ b/app/views/search/results.haml
@@ -1,10 +1,10 @@
 .results
   - if @comments
-    %p= "#{@comments.total_entries} results found for \"#{@search}\""
+    %p= t('.report', :count => @comments.total_entries, :term => @search)
 
   - form_tag search_path do
     = text_field_tag :search, params[:search]
-    = submit_tag(@comments ? "Search again" : "Search")
+    = submit_tag(@comments ? t('.search_again') : t('search.submit'))
 
 - if @comments
   #results_set
