perform search over GET; unobtrusive term highlighting; improve styles

--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -70,6 +70,11 @@ $typeface: "Lucida Grande", Helvetica, "Helvetica Neue", Arial, Verdana, sans-se
   @if $y_size > 0
     height: $y_size
 
+=light-box
+  border: 1px rgb(220, 220, 220) solid
+  background-color: rgb(240, 240, 240)
+  +rounded(5px)
+
 .fyi
   position: absolute
   background: white
