--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -174,11 +174,9 @@ $micro_size: 24px
     padding: 5px
     form.new_invitation
       font-size: 12px
-      border: 1px rgb(220, 220, 220) solid
-      background-color: rgb(240, 240, 240)
+      +light-box
       padding: 10px
       margin-bottom: 10px
-      +rounded(5px)
       h2
         font-size: 16px
         margin: 0 0 10px 0
