--- a/app/styles/_search.sass
+++ b/app/styles/_search.sass
@@ -13,20 +13,25 @@
         width: 10em
         +box-shadow(inset rgba(0,0,0,.2) 0px 1px 2px)
 
-.results_search
-  .comment
-    .block
-      width: 860px
-  .results
-    padding-left: 80px
-    font-size: 12px
-    margin: 20px
-    form
-      input#search
-        font-size: 20px
-        width: 450px
-        margin-right: 20px
-
-#results_set
-  span.highlight
-    background-color: yellow
+.index_search
+  #report
+    +light-box
+    margin: 10px 0
+    padding: 10px 1.2em
+    h1
+      margin-top: 0
+    form input[type=search]
+      width: 20em
+  
+  h2
+    font-size: 1.1em
+    padding-bottom: 0
+    border-bottom: none
+    margin: 1em 0 .2em 10px
+    
+  #results
+    .comment
+      .block
+        width: 880px
+    .highlight
+      background-color: yellow
