--- a/app/styles/_search.sass
+++ b/app/styles/_search.sass
@@ -22,12 +22,14 @@
       margin-top: 0
     form input[type=search]
       width: 20em
+      font-size: 1.1em
   
   h2
     font-size: 1.1em
     padding-bottom: 0
     border-bottom: none
-    margin: 1em 0 .2em 10px
+    margin: 1em 0 .1em 6px
+    color: lighten($text, 30%)
     
   #results
     .comment
@@ -35,3 +37,35 @@
         width: 880px
     .highlight
       background-color: yellow
+
+.pagination
+  text-align: left
+  margin-top: 1em
+  padding: .3em 0
+  +rounded(10px)
+  font-size: 12px
+  
+  a, span, em
+    padding: .2em .5em
+  span.disabled
+    color: lighten($text, 40%)
+  em, span.current
+    font-weight: bold
+    color: $text
+  a
+    border: 1px solid #DDDDDD
+    +rounded(3px)
+    text-decoration: none
+    &:hover, &:focus
+      border-color: darken($navbar, 30%)
+      background: $navbar
+      color: black
+  .page_info
+    color: #aaa
+    padding-top: .8em
+  .prev_page, .next_page
+    border-width: 2px
+  .prev_page
+    margin-right: 1em
+  .next_page
+    margin-left: 1em
