tracking open source installations: only active in production mode
Allows Teambox to collect stats about open source installations.
Easily disabled in teambox.yml file.

--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -7,4 +7,4 @@
     Project collaboration by
     = link_to 'Teambox', 'http://teambox.com'
 
-%div{ :style => "background-image: url(http://teambox.com/logo.png/#{Teambox.config.app_domain})"}
+= tracking_code
