Public pages link with icon on Project#show sidebar and settings

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -93,7 +93,7 @@
     margin: 15px 0
     display: block
 
-  a.gantt_link, a.calendars_link, a.print_link, a.email_link, a.subscribe
+  a.gantt_link, a.calendars_link, a.print_link, a.email_link, a.subscribe, a.public_link
     display: block
     margin-top: 5px
     font-size: 13px
@@ -107,6 +107,8 @@
     +print_icon
   a.email_link
     +mail_icon
+  a.public_link
+    +public_icon
   a.subscribe
     margin-top: 15px
     +feed_icon
