--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -17,6 +17,8 @@
   +sprite_16px(16px*15, 16px*3)
 =print_icon
   +sprite_16px(16px*15, 16px*4)
+=public_icon
+  +sprite_16px(16px*15, 16px*5)
 
 .trash_icon
   +hoverable_sprite_16px(16px*0, 0px, 16px, 16px)
