--- a/app/views/projects/fields/_settings.haml
+++ b/app/views/projects/fields/_settings.haml
@@ -15,6 +15,10 @@
   .check_box.archived
     = f.check_box :tracks_time
     = f.label :tracks_time, t('projects.fields.tracks_time')
-  .check_box.archived
-    = f.check_box :public
-    = f.label :public, t('projects.fields.public_project')
+.check_box.archived
+  = f.check_box :public
+  = f.label :public, t('projects.fields.public_project')
+- if @current_project.try(:public)
+  %div{ :style => 'margin: 10px 0 15px 22px; display: block' }
+    = link_to t('projects.show.public_project'), public_project_path(@current_project), :class => :public_link
+
