--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -22,3 +22,5 @@
   = instructions_for_calendars
   = #print_project_link(@current_project)
   = instructions_for_email(@current_project)
+  = link_to t('.public_project'), public_project_path(@current_project), :class => :public_link
+  
