--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -394,3 +394,13 @@ a.micro_avatar
     text-align: right
     padding-top: 8px
     width: 608px
+
+#user_biography
+  width: 490px
+
+.your_avatars
+  margin-top: 20px
+  img
+    background-color: #ddd
+    padding: 2px
+    border: 1px solid #999
