--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -12,8 +12,8 @@
 
   - secure_url = Teambox.config.secure_logins ? users_url(:protocol => 'https') : nil
 
-  - form_for @user, :url => secure_url do |form|
-    = render form
+  - form_for @user, :url => secure_url do |f|
+    = render 'users/form/new', :f => f, :user => f.object
     - if Rails.env.development?
       %p You are running in development mode. No email confirmation will be required.
       %p When running Teambox in production mode, signup will require an email confirmation.
