Add "use beta features" option for users.
This will be used later on to test new behaviours in production before they're released for everybody.

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -404,3 +404,10 @@ a.micro_avatar
     background-color: #ddd
     padding: 2px
     border: 1px solid #999
+
+.betatester
+  display: block
+  margin: 10px 0
+  padding-left: 110px
+  label
+    float: none
