"Show more" on the users page. Also add some more specs and cucumbers.

--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -17,3 +17,4 @@
   %h2= t('.recent_activity_for', :user_name => @user.name)
   #activities
     = list_activities(@activities)
+    = show_more_button(@activities)
