Removing "create an example project" links

--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -78,6 +78,11 @@ $typeface: "Lucida Grande", Helvetica, "Helvetica Neue", Arial, Verdana, sans-se
 .inline
   display: inline
 
+.errors_for
+  font-size: 12px
+  color: #500
+  font-weight: bold
+
 .fyi
   position: absolute
   background: white
