Fix the "insert here" marker.

--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -128,6 +128,7 @@
 
 #pageInsert
   position: relative
+  margin: 0px
   p
     background: black
     color: #e1e1e1
@@ -138,6 +139,7 @@
     height: 25px
     z-index: 100
     cursor: pointer
+    margin: 0px
 
 #pageInsertItems
   position: relative
@@ -148,10 +150,17 @@
   padding-top: 0px
   top: 0px
   position: relative
-  height: 32px
   z-index: 100
   width: 100%
   background-color: white
+  border-top: 1px dashed #ccc
+  border-bottom: 1px dashed #ccc
+  a
+    margin: 0px
+  .add_button
+    margin: 2px 3px
+  .buttons
+    padding: 0px
 
 #pageFormContainer
   margin-left: 16px
@@ -159,6 +168,7 @@
 #pageInsertItemCancel
   position: absolute
   left: 15px
+  line-height: 28px
 
 #pageInsertItemCancel
   a
