--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -286,7 +286,7 @@ form.new_note, form.edit_note
 .show_pages
   .upload
     padding-left: 0px
-    p.slotActions
+    p.actions
       float: right
       margin: 0px
       position: relative
