--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,10 +18,8 @@
     = archived_project_strip(@current_project)
     .container
       = header
-      = navigation(@current_project,current_user.projects,current_user.recent_projects) unless current_user.betatester
-      = compact_navigation(@current_project) if current_user.betatester
+      = navigation(@current_project,current_user.projects,current_user.recent_projects)
       .wrapper
-        = project_navigation(@current_project) unless current_user.betatester
         - show_flash
         - if yield :banner
           .banner= yield :banner
