--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,49 +1,117 @@
-<div class="navigation">
-
-<%
-if logged_in?
-  render_tabnav :main do 
-    unless current_user.welcome
-      add_tab do |t|
-        t.named t('.welcome')
-        t.links_to welcome_path
-        t.highlights_on :controller => :users, :action => :welcome
-        t.li_class = 'welcome'
-        t.tab_index = 100
-      end
-    end
-    
+<div class="navigation"><%
+  render_tabnav :project do
     add_tab({:html => {:id => 'projects_tab',
                        :class => 'nav_tab',
                        :li_class => 'nav_tab_container',
-	                     :li_end => projects_tab_list(current_user.projects.unarchived)}
-	          }) do |t|
-      t.named "#{t('.all_projects')} #{image_tag('triangle.png', :class => 'triangle')}"
-      t.links_to projects_path
+                       :li_end => projects_tab_list(current_user.projects.unarchived)}
+            }) do |t|
+      name = project ? truncate(project.name, :length => 30) : t('shared.navigation.all_projects')
+      t.named "#{name} #{image_tag('triangle.png', :class => 'triangle')}"
+      t.links_to(project ? project_path(project) : projects_path)
       t.highlights_on :controller => :projects, :action => :index
-      t.highlights_on :controller => :task_lists, :action => :index, :project_id => nil
+      t.highlights_on :controller => :projects, :action => :show
       t.tab_index = 101
     end
 
-    add_tab do |t|
-      t.named t('.new_project')
-      t.links_to new_project_path
-      t.highlights_on :controller => :projects, :action => :new
-      t.li_class = 'new'
-      t.tab_index = 102
-    end
-  
-    tab_index = 103
-    for project in Array(current_user.recent_projects)
+    if project.nil?
       add_tab do |t|
-        t.named truncate(project.name, :length => 20)
-        t.links_to project_path(project)
-        if project == @current_project
-          t.highlights_on :controller => controller_name
+       t.named t('shared.project_navigation.all_task_lists')
+       t.links_to task_lists_path
+       t.highlights_on :controller => :task_lists, :action => :index
+      end
+
+      add_tab do |t|
+       t.named t('shared.project_navigation.gantt')
+       t.links_to gantt_view_task_lists_path
+       t.highlights_on :controller => :task_lists, :action => :gantt_view
+      end
+
+      if time_tracking_enabled?
+        add_tab do |t|
+          t.named t('shared.project_navigation.time_tracking')
+          t.links_to time_path
+          t.highlights_on :controller => :hours, :action => :index
         end
-        t.tab_index = (tab_index += 1)
+      end
+
+      if groups_enabled?
+        add_tab do |t|
+         t.named t('shared.project_navigation.groups')
+         t.links_to groups_path
+         t.highlights_on :controller => :groups
+         t.li_class = 'groups'
+         t.li_class = 'right_side'
+         t.tab_index = 102
+        end
+      end
+
+      add_tab do |t|
+       t.named t('shared.project_navigation.organizations')
+       t.links_to organizations_path
+       t.highlights_on :controller => :organizations
+       t.li_class = 'organizations'
+       t.li_class = 'right_side'
+       t.tab_index = 102
+      end
+
+    else
+      add_tab do |t|
+        t.named t('shared.project_navigation.conversations')
+        t.links_to  project_conversations_path(project)
+        t.highlights_on :controller => :conversations
+        t.tab_index = 151
+      end
+
+      add_tab do |t|
+        t.named t('shared.project_navigation.task_lists')
+        t.links_to  project_task_lists_path(project)
+        t.highlights_on :controller => :task_lists
+        t.highlights_on :controller => :tasks
+        t.tab_index = 152
+      end
+
+      add_tab(:html => {:id => 'pages_tab',
+                        :class => 'nav_tab',
+                        :li_class => 'nav_tab_container',
+                        :li_end => pages_tab_list(project, project.pages) }) do |t|
+        t.named "#{t('shared.project_navigation.pages')} #{image_tag('triangle.png', :class => 'triangle')}"
+        t.links_to  project_pages_path(project)
+        t.highlights_on :controller => :pages
+        t.tab_index = 153
+      end
+
+      if time_tracking_enabled? and project.tracks_time
+        add_tab do |t|
+          t.named t('shared.project_navigation.time_tracking')
+          t.links_to  project_time_path(project)
+          t.highlights_on :controller => :hours
+        end
+      end
+
+      add_tab do |t|
+        t.named t('shared.project_navigation.files')
+        t.links_to  project_uploads_path(project)
+        t.highlights_on :controller => :uploads
+        t.tab_index = 154
+      end
+
+      add_tab do |t|
+        t.named t('shared.project_navigation.people')
+        t.links_to  project_people_path(project)
+        t.highlights_on :controller => :people
+        t.li_class = 'right_side'
+        t.tab_index = 156
+      end
+
+      if project.admin?(current_user)
+        add_tab do |t|
+          t.named t('shared.project_navigation.project_settings')
+          t.links_to  project_settings_path(project)
+          t.highlights_on :controller => :projects, :action => :edit
+          t.li_class = 'right_side'
+          t.tab_index = 155
+        end
       end
     end
   end
-end
-%></div>
+%><div class="clear"></div></div>
