External users will see a "request permission to join this organization" screen

--- a/app/styles/_organizations.sass
+++ b/app/styles/_organizations.sass
@@ -69,7 +69,7 @@
         float: right
         color: #999
 
-.index_memberships
+.index_memberships, .external_view_organizations
   h3
     margin: 10px 0px 5px
     font-weight: normal
