--- a/app/views/organizations/_column.haml
+++ b/app/views/organizations/_column.haml
@@ -5,8 +5,6 @@
   .todo{ :style => 'color:red; display: none' }
     %p Admins should be able to view all projects, even if they don't belong to them.
     %p Admins of an org are admins for all projects
-    %p If there's a project you're not invited to, what happens for Organization#show?
-    %p Regular users shouldn't see projects they don't belong to.
     %p Link to organization inside Project#show
     %p Verify that mobile projects work
     %p You shouldn't be able to transfer to organizations where you're not admin
@@ -20,3 +18,4 @@
     %p On open-source, we can use only one company and manage permissions with it
     %p Leave org
     %p Delete org
+    %p Users should be observable when you share an organization or project (spec)
